--- a/style.css
+++ b/style.css
@@ -3,7 +3,7 @@
 @import url('https://fonts.googleapis.com/css2?family=Quicksand:wght@500;600&display=swap');
 
 *{
-    margin:0
+    margin:0;
 }
 
 body{
@@ -20,6 +20,8 @@ body{
     background-size: 100%;
     border: 0.2rem solid white;
     box-shadow: blue;
+    margin-bottom: 3rem;
+    position: fixed;
 }
 
 h1{
@@ -28,35 +30,30 @@ h1{
     text-align: center;
 }
 
-#imagen{
-    display: flex;
-    justify-content;
-    width: 50%;
-    align-items:center;
-} 
-
-.foto{
-    border-radius: 5%; 
-    align-items: center;
-    justify-content: center;
-}
-
-    /** LISTA DE PAISES **/
-
 #contenedor{
     display: flex;
     width: 100%;
     flex-direction: row;
     justify-content: center;
-    padding-top: 3%;
-    padding-bottom: 2%;
+    padding-top: 10rem;
 }
+
+#cont-imagen{
+    display: flex;
+    width: 50%;
+    padding-right: 2rem; 
+} 
+
+.foto{
+    border-radius: 5%; 
+}
+
+    /** LISTA DE PAISES **/
     
 .lista{
     display:flex;
     width: 65%;
     justify-content: center; 
-    
 }
 
 ul{
@@ -65,32 +62,33 @@ ul{
     font-size: 1.5rem;
     width: 40%;
     border: 0.2rem solid;
-    padding-top: 1rem;
+    padding-top: 2rem;
+    padding-bottom: 2rem;
     border-radius: 5%;
     padding-left: 0;
 }
 
-.icom, #peru{
-    padding-left: 3rem;
-}
-
-/**
 li{
-    background-color:burlywood;
-}  **/
-
-li:hover{
-    color: blue;
-    font-weight: bold;
-}
-
-li, .icon{
     display: flex;
+    flex-direction: row;
     justify-content: center;
     align-items: center;
     justify-content: space-evenly;
 }
+
+li:hover{
+    color: blue;
+    font-weight: bold;
+    cursor:pointer;
+} 
+
     /** BUSCADOR **/
+
+.buscador{
+    margin-top: 2rem;
+    padding-top: 2rem;
+    width: auto;
+}
 
 h2{
     margin-left: 6rem;
